Update the book

--- a/slides.html
+++ b/slides.html
@@ -25,7 +25,7 @@
 <meta name="author" content="Florian Oswald, Jean-Marc Robin and Vincent Viers">
 
 
-<meta name="date" content="2018-11-04">
+<meta name="date" content="2018-11-05">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -215,6 +215,7 @@ code > span.in { color: #60a0b0; font-weight: bold; font-style: italic; } /* Inf
 <li><a href="http://rpubs.com/floswald/ScPoMetrics-3">chapter 3</a></li>
 <li><a href="slides/chapter4/chapter4.html">chapter 4</a></li>
 <li><a href="slides/chapter5/chapter5.html">chapter 5</a></li>
+<li><a href="slides/chapter6/chapter6.html">chapter 6</a></li>
 </ul>
 
 </div>
