Update the book

--- a/notes.html
+++ b/notes.html
@@ -25,7 +25,7 @@
 <meta name="author" content="Florian Oswald, Jean-Marc Robin and Vincent Viers">
 
 
-<meta name="date" content="2019-01-18">
+<meta name="date" content="2019-03-05">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -223,24 +223,24 @@ code > span.in { color: #60a0b0; font-weight: bold; font-style: italic; } /* Inf
 <ul>
 <li><strong>bookdown</strong> <span class="citation">(Xie <a href="#ref-R-bookdown">2018</a>)</span></li>
 <li><strong>shiny</strong> <span class="citation">(Chang et al. <a href="#ref-R-shiny">2018</a>)</span></li>
-<li><strong>learnr</strong> <span class="citation">(Schloerke, Allaire, and Borges <a href="#ref-R-learnr">2019</a>)</span></li>
+<li><strong>learnr</strong> <span class="citation">(Schloerke, Allaire, and Borges <a href="#ref-R-learnr">2018</a>)</span></li>
 <li><strong>datasauRus</strong> <span class="citation">(Locke and D’Agostino McGowan <a href="#ref-R-datasauRus">2018</a>)</span></li>
 <li><strong>webshot</strong> <span class="citation">(Chang <a href="#ref-R-webshot">2018</a>)</span></li>
 <li><strong>AER</strong> <span class="citation">(Kleiber and Zeileis <a href="#ref-R-AER">2018</a>)</span></li>
 <li><strong>knitr</strong> <span class="citation">(Xie <a href="#ref-xie2015">2015</a>)</span></li>
 <li><strong>ScPoEconometrics</strong> <span class="citation">(Oswald <a href="#ref-R-ScPoEconometrics">2018</a>)</span></li>
 <li><strong>Ecdat</strong> <span class="citation">(Croissant <a href="#ref-R-Ecdat">2016</a>)</span></li>
-<li><strong>Ecfun</strong> <span class="citation">(Graves <a href="#ref-R-Ecfun">2016</a>)</span></li>
+<li><strong>Ecfun</strong> <span class="citation">(Graves <a href="#ref-R-Ecfun">2019</a>)</span></li>
 <li><strong>R</strong> <span class="citation">(R Core Team <a href="#ref-R-base">2017</a>)</span></li>
-<li><strong>dplyr</strong> <span class="citation">(Wickham, François, et al. <a href="#ref-R-dplyr">2018</a>)</span></li>
-<li><strong>ggplot2</strong> <span class="citation">(Wickham, Chang, et al. <a href="#ref-R-ggplot2">2018</a>)</span></li>
+<li><strong>dplyr</strong> <span class="citation">(Wickham et al. <a href="#ref-R-dplyr">2019</a>)</span></li>
+<li><strong>ggplot2</strong> <span class="citation">(Wickham et al. <a href="#ref-R-ggplot2">2018</a>)</span></li>
 <li><strong>reshape2</strong> <span class="citation">(Wickham <a href="#ref-R-reshape2">2017</a>)</span></li>
-<li><strong>bindrcpp</strong> <span class="citation">(Müller <a href="#ref-R-bindrcpp">2018</a>)</span></li>
-<li><strong>mvtnorm</strong> <span class="citation">(Genz et al. <a href="#ref-R-mvtnorm">2018</a>)</span></li>
+<li><strong>bindrcpp</strong> <span class="citation">(<span class="citeproc-not-found" data-reference-id="R-bindrcpp"><strong>???</strong></span>)</span></li>
+<li><strong>mvtnorm</strong> <span class="citation">(Genz et al. <a href="#ref-R-mvtnorm">2019</a>)</span></li>
 <li><strong>plotly</strong> <span class="citation">(Sievert et al. <a href="#ref-R-plotly">2018</a>)</span></li>
 <li><strong>readr</strong> <span class="citation">(Wickham, Hester, and Francois <a href="#ref-R-readr">2018</a>)</span></li>
-<li><strong>readxl</strong> <span class="citation">(Wickham and Bryan <a href="#ref-R-readxl">2018</a>)</span></li>
-<li><strong>tidyr</strong> <span class="citation">(Wickham and Henry <a href="#ref-R-tidyr">2018</a>)</span></li>
+<li><strong>readxl</strong> <span class="citation">(Wickham and Bryan <a href="#ref-R-readxl">2019</a>)</span></li>
+<li><strong>tidyr</strong> <span class="citation">(Wickham and Henry <a href="#ref-R-tidyr">2019</a>)</span></li>
 <li><strong>readr</strong> <span class="citation">(Wickham, Hester, and Francois <a href="#ref-R-readr">2018</a>)</span></li>
 </ul>
 
@@ -254,7 +254,7 @@ code > span.in { color: #60a0b0; font-weight: bold; font-style: italic; } /* Inf
 <p>Chang, Winston, Joe Cheng, JJ Allaire, Yihui Xie, and Jonathan McPherson. 2018. <em>Shiny: Web Application Framework for R</em>. <a href="https://CRAN.R-project.org/package=shiny" class="uri">https://CRAN.R-project.org/package=shiny</a>.</p>
 </div>
 <div id="ref-R-learnr">
-<p>Schloerke, Barret, JJ Allaire, and Barbara Borges. 2019. <em>Learnr: Interactive Tutorials for R</em>. <a href="https://rstudio.github.io/learnr/" class="uri">https://rstudio.github.io/learnr/</a>.</p>
+<p>Schloerke, Barret, JJ Allaire, and Barbara Borges. 2018. <em>Learnr: Interactive Tutorials for R</em>. <a href="https://CRAN.R-project.org/package=learnr" class="uri">https://CRAN.R-project.org/package=learnr</a>.</p>
 </div>
 <div id="ref-R-datasauRus">
 <p>Locke, Steph, and Lucy D’Agostino McGowan. 2018. <em>DatasauRus: Datasets from the Datasaurus Dozen</em>. <a href="https://CRAN.R-project.org/package=datasauRus" class="uri">https://CRAN.R-project.org/package=datasauRus</a>.</p>
@@ -275,13 +275,13 @@ code > span.in { color: #60a0b0; font-weight: bold; font-style: italic; } /* Inf
 <p>Croissant, Yves. 2016. <em>Ecdat: Data Sets for Econometrics</em>. <a href="https://CRAN.R-project.org/package=Ecdat" class="uri">https://CRAN.R-project.org/package=Ecdat</a>.</p>
 </div>
 <div id="ref-R-Ecfun">
-<p>Graves, Spencer. 2016. <em>Ecfun: Functions for Ecdat</em>. <a href="https://CRAN.R-project.org/package=Ecfun" class="uri">https://CRAN.R-project.org/package=Ecfun</a>.</p>
+<p>Graves, Spencer. 2019. <em>Ecfun: Functions for Ecdat</em>. <a href="https://CRAN.R-project.org/package=Ecfun" class="uri">https://CRAN.R-project.org/package=Ecfun</a>.</p>
 </div>
 <div id="ref-R-base">
 <p>R Core Team. 2017. <em>R: A Language and Environment for Statistical Computing</em>. Vienna, Austria: R Foundation for Statistical Computing. <a href="https://www.R-project.org/" class="uri">https://www.R-project.org/</a>.</p>
 </div>
 <div id="ref-R-dplyr">
-<p>Wickham, Hadley, Romain François, Lionel Henry, and Kirill Müller. 2018. <em>Dplyr: A Grammar of Data Manipulation</em>. <a href="https://CRAN.R-project.org/package=dplyr" class="uri">https://CRAN.R-project.org/package=dplyr</a>.</p>
+<p>Wickham, Hadley, Romain François, Lionel Henry, and Kirill Müller. 2019. <em>Dplyr: A Grammar of Data Manipulation</em>. <a href="https://CRAN.R-project.org/package=dplyr" class="uri">https://CRAN.R-project.org/package=dplyr</a>.</p>
 </div>
 <div id="ref-R-ggplot2">
 <p>Wickham, Hadley, Winston Chang, Lionel Henry, Thomas Lin Pedersen, Kohske Takahashi, Claus Wilke, and Kara Woo. 2018. <em>Ggplot2: Create Elegant Data Visualisations Using the Grammar of Graphics</em>. <a href="https://CRAN.R-project.org/package=ggplot2" class="uri">https://CRAN.R-project.org/package=ggplot2</a>.</p>
@@ -289,11 +289,8 @@ code > span.in { color: #60a0b0; font-weight: bold; font-style: italic; } /* Inf
 <div id="ref-R-reshape2">
 <p>Wickham, Hadley. 2017. <em>Reshape2: Flexibly Reshape Data: A Reboot of the Reshape Package</em>. <a href="https://CRAN.R-project.org/package=reshape2" class="uri">https://CRAN.R-project.org/package=reshape2</a>.</p>
 </div>
-<div id="ref-R-bindrcpp">
-<p>Müller, Kirill. 2018. <em>Bindrcpp: An ’Rcpp’ Interface to Active Bindings</em>. <a href="https://CRAN.R-project.org/package=bindrcpp" class="uri">https://CRAN.R-project.org/package=bindrcpp</a>.</p>
-</div>
 <div id="ref-R-mvtnorm">
-<p>Genz, Alan, Frank Bretz, Tetsuhisa Miwa, Xuefei Mi, and Torsten Hothorn. 2018. <em>Mvtnorm: Multivariate Normal and T Distributions</em>. <a href="https://CRAN.R-project.org/package=mvtnorm" class="uri">https://CRAN.R-project.org/package=mvtnorm</a>.</p>
+<p>Genz, Alan, Frank Bretz, Tetsuhisa Miwa, Xuefei Mi, and Torsten Hothorn. 2019. <em>Mvtnorm: Multivariate Normal and T Distributions</em>. <a href="https://CRAN.R-project.org/package=mvtnorm" class="uri">https://CRAN.R-project.org/package=mvtnorm</a>.</p>
 </div>
 <div id="ref-R-plotly">
 <p>Sievert, Carson, Chris Parmer, Toby Hocking, Scott Chamberlain, Karthik Ram, Marianne Corvellec, and Pedro Despouy. 2018. <em>Plotly: Create Interactive Web Graphics via ’Plotly.js’</em>. <a href="https://CRAN.R-project.org/package=plotly" class="uri">https://CRAN.R-project.org/package=plotly</a>.</p>
@@ -302,10 +299,10 @@ code > span.in { color: #60a0b0; font-weight: bold; font-style: italic; } /* Inf
 <p>Wickham, Hadley, Jim Hester, and Romain Francois. 2018. <em>Readr: Read Rectangular Text Data</em>. <a href="https://CRAN.R-project.org/package=readr" class="uri">https://CRAN.R-project.org/package=readr</a>.</p>
 </div>
 <div id="ref-R-readxl">
-<p>Wickham, Hadley, and Jennifer Bryan. 2018. <em>Readxl: Read Excel Files</em>. <a href="https://CRAN.R-project.org/package=readxl" class="uri">https://CRAN.R-project.org/package=readxl</a>.</p>
+<p>Wickham, Hadley, and Jennifer Bryan. 2019. <em>Readxl: Read Excel Files</em>. <a href="https://CRAN.R-project.org/package=readxl" class="uri">https://CRAN.R-project.org/package=readxl</a>.</p>
 </div>
 <div id="ref-R-tidyr">
-<p>Wickham, Hadley, and Lionel Henry. 2018. <em>Tidyr: Easily Tidy Data with ’Spread()’ and ’Gather()’ Functions</em>. <a href="https://CRAN.R-project.org/package=tidyr" class="uri">https://CRAN.R-project.org/package=tidyr</a>.</p>
+<p>Wickham, Hadley, and Lionel Henry. 2019. <em>Tidyr: Easily Tidy Data with ’Spread()’ and ’Gather()’ Functions</em>. <a href="https://CRAN.R-project.org/package=tidyr" class="uri">https://CRAN.R-project.org/package=tidyr</a>.</p>
 </div>
 </div>
             </section>
