--- a/sum.html
+++ b/sum.html
@@ -25,7 +25,7 @@
 <meta name="author" content="Florian Oswald, Jean-Marc Robin and Vincent Viers">
 
 
-<meta name="date" content="2019-01-18">
+<meta name="date" content="2019-03-05">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -931,7 +931,7 @@ merge_GER &lt;-<span class="st"> </span>tot_pop <span class="op">%&gt;%</span>
     <span class="dt">by=</span><span class="st">&quot;year&quot;</span>)
 merge_GER</code></pre></div>
 <pre><code>#OUT&gt; # A tibble: 30 x 5
-#OUT&gt; # Groups:   year [?]
+#OUT&gt; # Groups:   year [10]
 #OUT&gt;    Country.x      year  counts.x Country.y                    counts.y
 #OUT&gt;    &lt;chr&gt;          &lt;chr&gt;    &lt;int&gt; &lt;chr&gt;                           &lt;int&gt;
 #OUT&gt;  1 France         2008  64007193 Germany including former GDR 82217837
